# wtfis

./: .env.wtfis.example  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml  tests.yml
tests/: conftest.py  test_cli.py  test_clients.py  test_handlers.py  test_models.py  test_models_vt.py  test_reverse_dns.py  test_ui_domain_view.py  test_ui_ip_view.py  test_ui_view.py  test_utils.py
tests/test_data/: abuseipdb_1.1.1.1_green.json  abuseipdb_1.1.1.1_raw.json  abuseipdb_1.1.1.1_red.json  abuseipdb_1.1.1.1_yellow.json  abuseipdb_one.json  greynoise_1.1.1.1.json  greynoise_1.1.1.1_malicious.json  greynoise_1.1.1.1_unknown.json  greynoise_one.json  ip2location_1.1.1.1.json  ip2location_gist.json  ip2whois_whois_bbc.json  ip2whois_whois_gist.json  ip2whois_whois_hotmail.json  ipinfo_1.1.1.1.json  ipinfo_gist.json  ipwhois_1.1.1.1.json  ipwhois_gist.json  ipwhois_raw_10.0.0.1.json  pt_passive_dns_gist.json  pt_whois_1.1.1.1.json  pt_whois_gist.json  shodan_1.1.1.1.json  shodan_gist.json  shodan_gist_2.json  shodan_one.json  shodan_wired.json  urlhaus_1.1.1.1.json  urlhaus_gist.json  vt_domain_gist.json  vt_domain_google.json  vt_domain_tucows.json  vt_historical_whois_1.json  vt_ip_1.1.1.1.json  vt_ip_142.251.220.110.json  vt_resolutions_gist.json  vt_resolutions_no_result.json  vt_resolutions_one.json  vt_resolutions_wired.json  vt_whois_1.1.1.1.json  (+6 more)
wtfis/: config.py  exceptions.py  main.py  types.py  utils.py  version.py  view.py
wtfis/clients/: abuseipdb.py  base.py  greynoise.py  ip2location.py  ip2whois.py  ipinfo.py  ipwhois.py  passivetotal.py  shodan.py  types.py  urlhaus.py  virustotal.py  whoisjson.py
wtfis/handlers/: base.py  domain.py  exceptions.py  ip.py
wtfis/models/: abuseipdb.py  base.py  common.py  greynoise.py  ip2location.py  ip2whois.py  ipinfo.py  ipwhois.py  passivetotal.py  shodan.py  types.py  urlhaus.py  virustotal.py  whoisjson.py
wtfis/ui/: base.py  progress.py  theme.py  view.py
