[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wtfis"
description = "Passive host and domain name lookup tool for non-robots"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["passive lookup", "security", "virustotal", "passivetotal", "whois"]
authors = [
    {name = "pirxthepilot", email = "pirxthepilot@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "pydantic~=1.9.1",
    "python-dotenv~=0.20.0",
    "requests~=2.28.1",
    "rich~=12.5.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pirxthepilot/wtfis"

[project.scripts]
wtfis = "wtfis.main:main"

[tool.hatch.version]
path = "wtfis/__about__.py"

[tool.hatch.envs.test]
dependencies = [
    "freezegun",
    "mypy",
    "pytest",
    "pytest-cov",
    "types-requests~=2.28.1",
]
[tool.hatch.envs.test.scripts]
typecheck = "mypy -p wtfis --ignore-missing-imports --no-implicit-optional --warn-unreachable"
test = "pytest -vv tests/"
test-cov = "pytest --cov-config=setup.cfg --cov-report=term-missing --cov=wtfis tests/"

[tool.hatch.envs.style]
detached = true
dependencies = [
    "flake8",
]
[tool.hatch.envs.style.scripts]
lint = "flake8 wtfis"

[tool.hatch.publish.index]
disable = true
