[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wtfis"
description = "Passive hostname, domain and IP lookup tool for non-robots"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
    "ipinfo",
    "osint",
    "passive lookup",
    "passivetotal",
    "security",
    "shodan",
    "virustotal",
    "whois",
]
authors = [
    {name = "pirxthepilot", email = "pirxthepilot@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "pydantic~=2.0.3",
    "python-dotenv~=0.21.0",
    "requests~=2.28.1",
    "rich~=12.6.0",
    "shodan~=1.28.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pirxthepilot/wtfis"

[project.scripts]
wtfis = "wtfis.main:main"

[tool.hatch.version]
path = "wtfis/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]

[tool.hatch.build.targets.wheel]

[tool.hatch.publish.index]
disable = true

# Hatch default env
[tool.hatch.envs.default]
dependencies = [
    "bandit",
    "flake8>=6.0.0",
    "freezegun",
    "mypy",
    "pytest",
    "pytest-cov",
    "types-requests~=2.28.1",
]
[tool.hatch.envs.default.scripts]
typecheck = "mypy -p {args:wtfis}"
test = "pytest -vv {args:tests/}"
test-cov = "pytest --cov-config=pyproject.toml --cov-report=term-missing --cov=wtfis {args:tests/}"
test-all = [
    "typecheck",
    "test-cov",
]

# Hatch test env
[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

# Hatch lint env
[tool.hatch.envs.lint]
detached = true
dependencies = [  # Make sure the respective versions are synced with default!
    "bandit",
    "flake8>=6.0.0",
]
[tool.hatch.envs.lint.scripts]
flake = "flake8 {args:wtfis}"
security = "bandit --quiet -r {args:wtfis}"
all = [
    "flake",
    "security",
]

# mypy
[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_unreachable = true
pretty = true

# pytest-cov
[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/__about__.py",
    "wtfis/version.py",
    "wtfis/ui/progress.py",
]
