[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wtfis"
description = "Passive hostname, domain and IP lookup tool for non-robots"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
    "abuseipdb",
    "greynoise",
    "ipinfo",
    "osint",
    "passive lookup",
    "security",
    "shodan",
    "urlhaus",
    "virustotal",
    "whois",
]
authors = [
    {name = "pirxthepilot", email = "pirxthepilot@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "pydantic~=2.10.6; python_version == '3.8'",
    "pydantic~=2.11.3; python_version >= '3.9'",
    "python-dotenv~=1.0.1; python_version == '3.8'",
    "python-dotenv>=1.1.0,<2; python_version >= '3.9'",
    "requests>=2.32.3,<3",
    "rich>=14.0.0,<15",
    "shodan>=1.31.0,<2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pirxthepilot/wtfis"

[project.scripts]
wtfis = "wtfis.main:main"

[tool.hatch.version]
path = "wtfis/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]

[tool.hatch.build.targets.wheel]

[tool.hatch.publish.index]
disable = true

# Hatch default env
[tool.hatch.envs.default]
dependencies = [
    "bandit",
    "black~=24.8.0",
    "flake8>=7.1.2",
    "flake8-bugbear~=24.12.12",
    "freezegun",
    "isort~=5.13.2",
    "mypy",
    "pytest",
    "pytest-cov",
    "types-requests>=2.32.0,<3",
]
[tool.hatch.envs.default.scripts]
typecheck = "mypy -p {args:wtfis}"
test = "pytest -vv {args:tests/}"
test-cov = "pytest --cov-config=pyproject.toml --cov-report=term-missing --cov=wtfis {args:tests/}"
test-all = [
    "typecheck",
    "test-cov",
]

# Hatch test env
[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311", "312", "313"]

# Hatch lint env
[tool.hatch.envs.lint]
detached = true
dependencies = [  # Make sure the respective versions are synced with default!
    "bandit",
    "black~=24.8.0",
    "flake8>=7.1.2",
    "flake8-bugbear~=24.12.12",
    "isort~=5.13.2",
]
[tool.hatch.envs.lint.scripts]
black_check = "black --check wtfis tests"
isort_check = "isort --check-only wtfis tests"
flake = "flake8 wtfis tests"
security = "bandit --quiet -r wtfis"
all = [
    "black_check",
    "isort_check",
    "flake",
    "security",
]

# isort
[tool.isort]
profile = "black"

# mypy
[tool.mypy]
plugins = ["pydantic.mypy"]

ignore_missing_imports = true
no_implicit_optional = true
warn_unreachable = true
pretty = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# pytest-cov
[tool.coverage.run]
omit = [
    "*/__init__.py",
    "*/__about__.py",
    "wtfis/version.py",
    "wtfis/ui/progress.py",
]
